# YVA-Youtube_Video_Analyser

./: README.md  pyproject.toml
resume_yt_videos_project/: __init__.py
