[tool.poetry]
name = "resume-yt-videos-project"
version = "0.1.0"
description = ""
authors = ["Eric Rafael <rafaelpsec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytube = "^15.0.0"
pytubefix = "^8.6.0"
openai = "^1.55.3"
python-dotenv = "^1.0.1"
setuptools-rust = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
