[tool.poetry]
name = "resume-yt-videos-project"
version = "0.1.0"
description = ""
authors = ["Eric Rafael <rafaelpsec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.1"
python-dotenv = "^1.0.1"
tqdm = "^4.67.1"
numpy = "2.0"
pytubefix = "^8.7.0"
groq = "^0.13.0"
openai-whisper = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
